--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                     
                     <p style="font-size: 1.4em; color: #666; margin-bottom: 10px;">Презентацию подготовил</p>
                     <p style="font-size: 2em; font-weight: 700; color: #333; margin-bottom: 10px;">Михаил Маро</p>
-                    <p style="font-size: 1.4em; color: #8A00F4; margin-bottom: 30px;">Арт-директор Studio 37</p>
+                    <p style="font-size: 1.4em; color: #8A00F4; margin-bottom: 30px;">Арт-директор</p>
                     
                     <a href="https://studio37.team/" target="_blank" class="site-link" style="font-size: 1.2em; color: #E600AD; text-decoration: none; display: inline-block; padding: 12px 30px; border: 2px solid #E600AD; border-radius: 30px; font-weight: 500;">studio37.team</a>
                 </div>
